# mopactools

./: .buildinfo  .gitignore  LICENSE  README.md  api.html  example.html  genindex.html  index.html  installation.html  objects.inv  pyproject.toml  search.html  searchindex.js
.github/workflows/: ci.yaml  package.yaml  sphinx.yaml
_sources/: api.rst.txt
docs/: api.rst  conf.py  example.rst  index.rst  installation.rst
src/mopactools/: api.py  binding.py
tests/: test.mop  test_api.py
